# genaistudio-agi-v4

./: .cruft.json  .gitignore  LICENSE.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
Config/: .env.secret.template  .env.shared
src/components/: __init__.py  chat_component.py  model_selection.py
src/config/: settings.py
src/models/: llm.py
src/prompts/: prompt.py
src/services/: chat_service.py
tests/: __init__.py  test_import.py
